[package]
name = "stable_deref_trait"
version = "1.1.1"
authors = ["Robert Grosse <n210241048576@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/storyyeller/stable_deref_trait"
documentation = "https://docs.rs/stable_deref_trait/1.1.1/stable_deref_trait"
categories = ["memory-management", "no-std"]
description = """
An unsafe marker trait for types like Box and Rc that dereference to a stable address even when moved, and hence can be used with libraries such as owning_ref and rental.
"""

[dependencies]
# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = '0.1.49', optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
rustc-dep-of-std = ["dep:core", "dep:alloc", "compiler_builtins"]
